set/unset the canvas on canvas change on the color popups

BUG:322660